Changed flat template to spanish and fixed publications title overflow

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ h4 span:first-child {
 		border-top: 1px solid #f4f6f6;
 		height: 20px;
 		margin-top: 12px;
-		margin-bottom: -2px;
+		margin-bottom: 20px;
 		position: relative;
 	}
 	.strike-through span,
